Added pixel colour change on hover

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="refresh">New Grid</button>
+
     <div id="container"></div>
     
     <script src="script.js"></script>
